--- a/app/static/about.html
+++ b/app/static/about.html
@@ -5,11 +5,33 @@
 <head>
 	<title>About</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <style>
-    body {
-        font-family:    arial,sans-serif;
-    }
-    </style>
+        <style>
+        body {
+                font-family: monospace;
+                margin: 5%;
+                background: rgb(130, 170, 204) none repeat scroll 0% 0%;
+                color: rgb(7, 3, 66);
+        }
+
+        a {
+                color: rgb(147, 69, 69);
+        }
+
+        table, td {
+                table-layout: fixed;
+                word-wrap: break-word;
+                width: 100%;
+                padding: 10px;
+                background: rgba(68, 18, 18, 0.08) none repeat scroll 0% 0%;
+        }
+
+        input[type="text"] {
+                width: 100%;
+                box-sizing: border-box;
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+        }
+        </style>
 </head>
 
 <body>
@@ -17,7 +39,7 @@
     <p>
     <ul>
         <li>As this is a simple project for the use of a few friends, I
-        haven't really focused on security or safeguard.  I really rely
+        haven't really focused on security or safeguards.  I really rely
         on the presumption that people will use the tool sensibly - so
         please do.  Only add songs you actually like and think others
         would like to hear, and please don't remove songs others have
@@ -29,12 +51,9 @@
         field.  Submitter name is your nick; it is also optional, but it
         would be nice to know who is submitting.  Also, if you do add
         your name, keep it consistent (eg, bunburya, and not bunburya_)
-        so in the future I can add search functionality.  All field are
+        so in the future I can add search functionality.  All fields are
         limited to 250 chars; if you think this is too short, let me
         know.</li>
-        <li>There is a simple POST API, eventually I will document it
-        but in the meantime let me know if you want to know more about
-        it.</li>
         <li>Coming soon: bunbot integration and RSS.</li>
         <li>Remember that this page is technically accessible by anyone
         so don't put anything up here you wouldn't want the world to
@@ -48,7 +67,7 @@
     </ul>
 	</p>
     <p>
-    bunburya
+    -- bunburya
     </p>
 </body>
 
