adding external stylesheet; updating about

--- a/about.html
+++ b/about.html
@@ -28,14 +28,20 @@
         so in the future I can add search functionality.  All fields are
         limited to 250 chars; if you think this is too short, let me
         know.</li>
-        <li>Coming soon: bunbot integration and RSS.</li>
+        <li>If you are in a channel where bunbot resides, you can
+        interact with the songlist using the following commands:
+            <ul>
+                <li><code>!add_song <url> <song name and title></code>
+                to add a song; and</li>
+                <li><code>!random_song</code> to fetch a random song
+                from the list.</li>
+            </ul>
+        </li>
+        <li>RSS integration coming soon.</li>
         <li>Remember that this page is technically accessible by anyone
         so don't put anything up here you wouldn't want the world to
         see.  Of course I disclaim any responsibility for anything
         other people put on this page.</li>
-        <li>Yeah it doesn't look good, BUT NEITHER DO YOU.  If someone
-        wants to do up a nice stylesheet I would consider integrating
-        it, but really does it matter?</li>
         <li>If you have any comments, requests or problems, just let me
         know on IRC.  Thanks!</li>
     </ul>
