--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>About the song list</h1>
+    <h1>About the songlist</h1>
     <p>
     <ul>
         <li>As this is a simple project for the use of a few friends, I
@@ -37,7 +37,9 @@
                 from the list.</li>
             </ul>
         </li>
-        <li>RSS integration coming soon.</li>
+        <li>To avoid duplicate submissions, submitting a URL that has
+        been submitted before will silently delete the old submission.
+        </li>
         <li>Remember that this page is technically accessible by anyone
         so don't put anything up here you wouldn't want the world to
         see.  Of course I disclaim any responsibility for anything
@@ -49,6 +51,8 @@
     <p>
     -- bunburya
     </p>
+    <p>
+    (<a href="http://bunburya.eu/songlist">Back to the songlist</a>)
 </body>
 
 </html>
